@@ -21,7 +21,7 @@
 
 #include "gda-default.h"
 
-static GdaServerImpl*         server_impl = NULL;
+static GdaServer*             server_impl = NULL;
 static GdaServerImplFunctions server_impl_functions = {
 	gda_default_connection_new,
 	gda_default_connection_open,
@@ -61,10 +61,10 @@ main (gint argc, gchar *argv[])
 	gda_server_init("gda-default-srv", VERSION, argc, argv);
 
 	/* register the server implementation */
-	server_impl = gda_server_impl_new("OAFIID:GNOME_GDA_Provider_Default_ConnectionFactory",
-									  &server_impl_functions);
+	server_impl = gda_server_new("OAFIID:GNOME_GDA_Provider_Default_ConnectionFactory",
+				  &server_impl_functions);
 	if (server_impl) {
-		gda_server_impl_start(server_impl);
+		gda_server_start(server_impl);
     }
 	else gda_log_error(_("Could not register Default provider implementation"));
 	return 0;
