@@ -18,7 +18,7 @@
 
 #include "gda-primebase.h"
 
-static GdaServerImpl*         server_impl = NULL;
+static GdaServer*             server_impl = NULL;
 static GdaServerImplFunctions server_impl_functions =
 {
   gda_primebase_connection_new,
@@ -62,10 +62,10 @@ main (gint argc, gchar *argv[])
   gda_server_init("gda-postgres-srv", VERSION, argc, argv);
 
   /* register the server implementation */
-  server_impl = gda_server_impl_new("OAFIID:GNOME_GDA_Provider_Primebase_ConnectionFactory", &server_impl_functions);
+  server_impl = gda_server_new("OAFIID:GNOME_GDA_Provider_Primebase_ConnectionFactory", &server_impl_functions);
   if (server_impl)
     {
-      gda_server_impl_start(server_impl);
+      gda_server_start(server_impl);
     }
   else gda_log_error(_("Could not register PRIMEBASE provider implementation"));
   return 0;
