@@ -1,3 +1,7 @@
+2001-07-05  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* adapted all providers to new API names in libgda-server
+
 2001-04-28  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* ChangeLog: added
